k8s/ingress/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capishop-ingress
  namespace: capishop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
    - hosts:
        - capishop.local
      secretName: capishop-tls
  rules:
    - host: capishop.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: capishop-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capishop-frontend
                port:
                  number: 80
